# project-brain

./: .gitignore  AUDIT-LOG.md  CODEOWNERS  CONTRIBUTING.md  CONVENTIONS.md  INSTALL.md  LICENSE  NOTICE  PORTING.md  QUICKSTART.md  README.md  RELEASE-NOTES.md  RUNTIME.md  SECURITY.md  compat-matrix.md  skill-contract-template.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: verify-brain.yml
assets/: NODE-template.md  README.md  artifact-template.md  current-state-template.md  impl-spec-template.md  leaf-template.md  thread-index-template.md
assets/commit-templates/: build.txt  (+2 more)
commands/: assign-thread.md  discard-promotion.md  discard-thread.md  discover-threads.md  finalize-promotion.md  init-project-brain.md  list-threads.md  materialize-context.md  multi-agent-debate.md  new-thread.md  park-thread.md  promote-thread-to-tree.md  record-artifact.md  restore-thread.md  review-parked-threads.md  review-thread.md  update-thread.md  verify-tree.md
mcp/: README.md  pyproject.toml
mcp/src/project_brain_mcp/: __init__.py  __main__.py  _response.py  _subprocess.py  prompts.py  resources.py  server.py  tools.py
scripts/: _plugin_root.sh  _validate_slug.py  assign-thread.sh  discard-thread.sh  discover-threads.sh  init-brain.sh  list-threads.sh  migrate-brain-dir.sh  migrate-v1-to-v2.sh  new-thread.sh  park-thread.sh  promote-local.sh  record-artifact.sh  rename-thread-slug.sh  restore-thread.sh  review-thread.sh  smoke_mcp_roundtrip.py  test_smoke_mcp_roundtrip.py  test_smoke_new_thread.sh  test_verify_tree.py  update-thread.sh  verify-tree.py
(+91 files in other folders)
