[project]
name = "project-brain-mcp"
version = "1.0.0"
description = "MCP server for project-brain — markdown-in-git decision tracking"
readme = "README.md"
authors = [{name = "Tom", email = "taotan6@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[project.scripts]
project-brain-mcp = "project_brain_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_brain_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"../skills" = "project_brain_mcp/_pack/skills"
"../scripts" = "project_brain_mcp/_pack/scripts"
"../assets" = "project_brain_mcp/_pack/assets"
"../CONVENTIONS.md" = "project_brain_mcp/_pack/CONVENTIONS.md"
